marvelus_examples/tests/pos/ite01.zls
(* ==== POS 2: ITE (constdecl) guarded heads with NF ==== *)
let foo : {v:int | v >= 0 && nxt(globally(v >= 0))} = 3
let ite_ok : {v:int | globally(v <= 0)} =
  if foo >= 0 then -1*foo else foo
(* THEN: fooâ‰Ą0 â‡’ -fooâ‰¤0; ELSE: Â¬(fooâ‰Ą0) â‡’ fooâ‰¤0 (vacuous or true) *)

let dt = 0.1 
let hybrid main () = let rec trigger = (period (dt)) in
        present (trigger) -> (let (x) = ite_ok in
        (print_int x; print_newline ())) else ()
